# swagger.yaml
@@ -117,34 +117,64 @@ paths:
         default:
           description: Неизвестная ошибка
 
-  /api/filter/{domain}:
+  /api/filter/type:
+    get:
+      summary: Получить список типов фильтрации
+      operationId: main.filter_type
+      produces:
+        - application/json
+      responses:
+        200:
+          description: OK
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: Имя фильтра
+                value:
+                  type: integer
+                  description: Значение фильтра
+        500:
+          description: Ошибка на сервере
+        default:
+          description: Неизвестная ошибка
+
+  /api/filter/list/{domain}/{filter_type}:
     post:
-      summary: Фильтрация данных по домену
-      operationId: main.filter_data  # Убедитесь, что указано корректное имя функции
+      summary: Получить список данных, отфильтрованных по типу
+      operationId: main.filter_data_list
       consumes:
         - application/json
       produces:
         - text/plain
       parameters:
-        - in: path
-          name: domain
+        - name: domain
+          in: path
+          description: Уникальный код домена
           required: true
-          description: Индекс домена, который нужно фильтровать (например, 0 для "nomenclature_model")
           type: string
-        - in: body
-          name: body
+        - name: filter_type
+          in: path
+          description: Тип фильтрации
           required: true
-          description: Модель фильтрации данных
+          type: string
+        - name: body
+          in: body
+          description: JSON данные для фильтрации
+          required: true
           schema:
             type: object
             additionalProperties: true
       responses:
         200:
-          description: Успешная фильтрация
+          description: OK
           schema:
-            type: string
             description: Отфильтрованные данные
         400:
           description: Ошибка валидации данных
         500:
           description: Внутренняя ошибка сервера
+
